# http-server

./: .clang-format  CMakeLists.txt  redblack.c
docs/: server.md
include/: linkedlist.h  server.h
src/: linkedlist.c  server.c
tests/: CMakeLists.txt  linkedlist_test.c  server_test.c
